AM_CPPFLAGS = -I../include

exampledir = $(datarootdir)/cpuaff/examples
noinst_PROGRAMS = list_cpus list_pci_devices simple_affinity affinity_stack list_nearby_cpus
list_cpus_SOURCES = list_cpus.cpp
list_pci_devices_SOURCES = list_pci_devices.cpp
simple_affinity_SOURCES = simple_affinity.cpp
affinity_stack_SOURCES = affinity_stack.cpp
list_nearby_cpus_SOURCES = list_nearby_cpus.cpp
